edit css index aglio cacio carbonara

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,20 @@ div {
     text-align: center;
 }
 
-ul {
-    list-style-type: none;
+p {
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+li {
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .maintitle {
@@ -17,6 +29,10 @@ ul {
 .listitem {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 30px;
+}
+
+.titlelist {
+    list-style-type: none;
 }
 
 
